Creating ComicBuilder and updating tests